# ac215-mega

./: .gitignore  Dockerfile  main.py  pyproject.toml
src/: constants.py  generate.py  synthesize.py  transcribe.py  translate.py  utils.py
